# Vrep2Gazebo

./: README.md  notes.txt
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/src/robosnake_description/: CMakeLists.txt  package.xml
catkin_ws/src/robosnake_description/sdf/: 11segment.config  11segment.sdf
gazebo/: README.md
gazebo-demo/3-Segment/: model.config  model.sdf
gazebo/11-segment/: model.config  model.sdf
gazebo/11-segment/meshes/: highpoly_visual.stl
gazebo/src/robosnake_control/: CMakeLists.txt  package.xml
gazebo/src/robosnake_control/config/: robosnake_control.yaml
gazebo/src/robosnake_control/launch/: robosnake_control.launch
gazebo/src/robosnake_description/: package.xml
gazebo/src/robosnake_description/sdf/: 11segment.config  11segment.sdf  robosnake.config  robosnake.sdf
gazebo/src/robosnake_description/urdf/: robosnake.urdf
gazebo/src/robosnake_gait/: CMakeLists.txt  README.md  package.xml
gazebo/src/robosnake_gait/include/: gait.hpp  sidewinding.hpp
gazebo/src/robosnake_gait/src/: robosnake_gait.cpp  sidewinding.cpp
gazebo/src/robosnake_gazebo/: CMakeLists.txt  package.xml
gazebo/src/robosnake_gazebo/launch/: robosnake.launch
gazebo/src/robosnake_simplegait/: CMakeLists.txt  README.md  package.xml
gazebo/src/robosnake_simplegait/include/: gait.hpp  sidewinding.hpp  simplegait.hpp
gazebo/src/robosnake_simplegait/src/: gait.cpp  robosnake_simplegait.cpp  sidewinding.cpp  simplegait.cpp
lowpoly_model/: lowpoly.stl
matlab/: README.md  cleanup.m  complexGait.m  gait_rolling.m  gait_rolling_simple.m  init.m  performGait_rolling.m  resetSnake.m  rolling.asv  rolling.m  setJointTargetPosition.m  simpleGait.m  simpleRolling.m  test.m
matlab/bugfix/: README.md
model/: Snake_Gazebo.STL  down.IGS  middle.IGS  up.EPRT  up.IGS  up.SLDPRT  up.STL
model/CAD/: down.EPRT  down.IGS  down.STL  middle.EPRT  middle.IGS  middle.STL  up.IGS
model/highpoly_model/: highpoly.stl
model/lowpoly_model/: lowpoly.blend
vrep/: eleven_modules.ttt
(+1 files in other folders)
